# proj2

proj2(1)/: Astar.h  BFS.h  BackTrace.h  BestFS.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.h  FileCacheManager.h  MatrixSearchable.h  MatrixSolver.h  MyClientHandler.cpp  MyClientHandler.h  MyParallerServer.cpp  MyParallerServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  Searchable.h  Searcher.h  Server.h  Solver.h  StartMain.h  State.h  StringReverse.cpp  StringReverse.h  main.cpp
